Add support of Java 21, make virtual threads the default