@@ -1,9 +1,9 @@
 # jexpress
 [JExpress.java](src/main/java/JExpress.java), a light and slow [express.js](http://expressjs.com/)/[sinatra](http://sinatrarb.com/)
 like library written in Java 17 (in [one file](src/main/java/JExpress.java)).
+It uses virtual threads if run with Java 21 (or Java 19/20 with --enable-preview).
 
-There is also [JExpress8.java](src/main/java/JExpress8.java), a version backward compatible with Java 8 and
-[JExpressLoom.java](src/main/java/JExpressLoom.java), a version that uses loom virtual threads (Java 19+) if available.
+There is also [JExpress8.java](src/main/java/JExpress8.java), a version backward compatible with Java 8.
 
 ## [API](https://javadoc.jitpack.io/com/github/forax/jexpress/master-SNAPSHOT/javadoc/JExpress.html)
 - JExpress: [express()](https://javadoc.jitpack.io/com/github/forax/jexpress/master-SNAPSHOT/javadoc/JExpress.html#express()),
